[gd_scene load_steps=9 format=2]

[ext_resource path="res://cannon.png" type="Texture" id=1]
[ext_resource path="res://cannonScript.gd" type="Script" id=2]
[ext_resource path="res://sf_cannon_01.mp3" type="AudioStream" id=3]
[ext_resource path="res://in_hammer_hit_04_hpx.mp3" type="AudioStream" id=4]
[ext_resource path="res://board.png" type="Texture" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 7.80256

[sub_resource type="ParticlesMaterial" id=2]
emission_shape = 1
emission_sphere_radius = 3.0
flag_disable_z = true
orbit_velocity = 0.0
orbit_velocity_random = 0.0
color = Color( 0.909804, 0.945098, 0.160784, 1 )

[sub_resource type="ParticlesMaterial" id=3]
emission_shape = 1
emission_sphere_radius = 47.03
flag_disable_z = true
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = 395.3
scale = 2.9
color = Color( 0.176471, 0.172549, 0.172549, 1 )

[node name="Cannon" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.393541, 0.337248 )
z_index = 2
texture = ExtResource( 1 )

[node name="AttackArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
scale = Vector2( 40, 40 )
shape = SubResource( 1 )

[node name="Gun Timer" type="Timer" parent="."]

[node name="gunSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[node name="Particles2D" type="Particles2D" parent="."]
position = Vector2( 29, -5 )
z_index = 5
emitting = false
amount = 50
lifetime = 3.0
one_shot = true
explosiveness = 0.67
process_material = SubResource( 2 )

[node name="BuildSmoke" type="Particles2D" parent="."]
position = Vector2( 1, 0 )
emitting = false
amount = 800
one_shot = true
speed_scale = 8.59
randomness = 0.42
process_material = SubResource( 3 )

[node name="BuildSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[node name="ready_to_fire" type="Sprite" parent="."]
scale = Vector2( 0.108961, 0.162698 )
z_index = 1
texture = ExtResource( 5 )

[connection signal="timeout" from="Gun Timer" to="." method="_on_Gun_Timer_timeout"]
